# ICCAD-contest

./: .gitignore  Layout_format.txt  README.md  plotting.py
BonnQiam/: CMakeLists.txt  Main.cpp  PTR.hpp  PTR_coordinate.hpp  PTR_test  PTR_test.cpp
BonnQiam/Demo_Optimization/: CMakeLists.txt  Input_b.txt  Input_m.txt  Input_s.txt  Main.cpp  opt.hpp  util.hpp  visualize.py
BonnQiam/Density_Optimization/: Fast_Median.hpp  Grid_opt.txt  Main.cpp  Test.cpp  util.hpp  visualize.py
BonnQiam/Desntiy_Optimization/: Main.cpp  sM1.txt  visualize.py
BonnQiam/GDS2_read_decomposition/: Decomposition.hpp  Main.cpp  Polygon.hpp
BonnQiam/GDS2_read_decomposition_v2/: CMakeLists.txt  Main.cpp
BonnQiam/Grid/: Decomposition.hpp  Grid.hpp  Grid_Test.py  Main.cpp  Polygon.hpp  Rectangle.hpp  grid_test.txt
BonnQiam/Overlay/: Execute.sh  Main.cpp  Visualize.py  grid_1.txt  grid_2.txt  util.hpp  visualize.py
DFI/: UFO  release.sh
DFI/bench/: sM1.txt  sM2.txt  sM3.txt
tim86101/include/: chip.h  layer.h
tim86101/src/: chip.cpp  layer.cpp  main.cpp
